--- a/_config.yml
+++ b/_config.yml
@@ -96,14 +96,14 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/ZehaoDou-official"
+  github           : "ZehaoDou-official"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/zehao-dou-870b4b133"
-  orcid            : "http://orcid.org/yourorcidurl"
+  linkedin         : "zehao-dou-870b4b133"
+  orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
