--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Zehao Dou"
   avatar           : "profile.png"
-  bio              : "Let there be light."
+  bio              : "Ordinary yet unique."
   location         : "New Haven, Connecticut, USA"
   employer         :
   pubmed           : 
