--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,7 +6,7 @@ Name Name:
   email       : "zehao.dou@yale.edu"
   bio         : "Zehao Dou is a second year PhD student from the Department of Statistics and Data Science, Yale University. Previously, he obtained his bachelor degree from School of Mathematical Sciences, Peking University (2015.9-2019.7). He has wide research interests including statistics, optimization, game theory, machine learning theory and reinforcement learning theory. His goal is to design efficient and provable algorithms, to deepen the statistical understanding, and to provide new perspective for practical machine learning problems. "
   avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
+  twitter     : "zehao_dou"
   google_plus : "Name"
 
 Name2 Name2:
