--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=CypbdCkAAAAJ&hl=en&oi=ao"
-  email            : "zehao.dou@yale.edu"
+  email            : "zehaodou.yale@gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
