--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Zehao Dou"
   avatar           : "profile.png"
   bio              : "Ordinary yet unique."
-  location         : "New Haven, CT, USA"
+  location         : "San Francisco, CA, USA"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=CypbdCkAAAAJ&hl=en&oi=ao"
